test/functions/whereClauses/whereClauseIntAndArrayArg.good
whereClauseIntAndArrayArg.chpl:3: In function 'wrong':
whereClauseIntAndArrayArg.chpl:3: error: a 'where' clause expression must evaluate to a 'param bool', but got a 'param int(64)' instead
  whereClauseIntAndArrayArg.chpl:1: called as wrong(ax: [domain(1,int(64),one)] real(64))
